--- a/piggy_bank1/res/layout/activity_accountspage.xml
+++ b/piggy_bank1/res/layout/activity_accountspage.xml
@@ -9,9 +9,10 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        android:gravity="center"
         android:text="@string/existing_account"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
